tests/ui/unstable-feature-bound/unstable_feature_bound_on_trait.fail.stderr
error: unstable feature `foo` is used without being enabled.
  --> $DIR/unstable_feature_bound_on_trait.rs:28:5
   |
LL |     Foo::bar();
   |     ^^^^^^^^^^
   |
   = help: The feature can be enabled by marking the current item with `#[unstable_feature_bound(foo)]`
note: required by a bound in `Bar::bar`
  --> $DIR/unstable_feature_bound_on_trait.rs:16:1
   |
LL | #[unstable_feature_bound(foo)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Bar::bar`
...
LL |     fn bar() {}
   |        --- required by a bound in this associated function

error: aborting due to 1 previous error

